update card & more

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -204,3 +204,11 @@
 .highlight {
   background-position: -100%;
 }
+
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
